--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
         }
     ],
     "require": {
-        "payum/core": "^1.5",
-        "braintree/braintree_php": "^3.21.0"
+        "php": ">=7.2",
+        "payum/core": "^1.6.0",
+        "braintree/braintree_php": "^5.1.0"
     },
     "require-dev": {
-        "php-http/guzzle6-adapter": "^1.0",
-        "phpunit/phpunit": "^5.7.6"
+        "php-http/guzzle6-adapter": "^2.0.1",
+        "phpunit/phpunit": "^7.5.20"
     },
     "config": {
         "bin-dir": "bin"
@@ -28,7 +29,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "2.1-dev"
         }
     }
 }
