--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,7 +6,7 @@
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
          processIsolation="false"
-         bootstrap="autoload.php.dist" >
+         bootstrap="vendor/autoload.php" >
     <php>
         <var name="__PAYUM_BRAINTREE_MERCHANT_ID" value="" />
         <var name="__PAYUM_BRAINTREE_PUBLIC_KEY" value="" />
