--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require-dev": {
         "php-http/guzzle6-adapter": "^2.0.1",
-        "phpunit/phpunit": "^7.5.20"
+        "phpunit/phpunit": "^7.5.0|^8.5.0"
     },
     "config": {
         "bin-dir": "bin"
